--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-  <app-payment-details></app-payment-details>
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
 </div>
