--- a/src/app/componets/payment-details/payment-details.component.html
+++ b/src/app/componets/payment-details/payment-details.component.html
@@ -1,12 +1,12 @@
-<div class="jumbotron">
-  <h1 class="text-4 text-center">Payment Detail Register</h1>
-  <hr>
-  <div class="row">
-    <div class="col-md-5">
-      <app-payment-detail></app-payment-detail>
-    </div>
-    <div class="col-md-7">
-      <app-payment-detail-list></app-payment-detail-list>
-    </div>
+<div class="jumbotron p-3">
+  <h1 class=" text-center">Payment Detail Register</h1>
+</div>
+
+<div class="row m-2">
+  <div class="col-md-5">
+    <app-payment-detail></app-payment-detail>
+  </div>
+  <div class="col-md-7">
+    <app-payment-detail-list></app-payment-detail-list>
   </div>
 </div>
